--- a/css/pagina3.css
+++ b/css/pagina3.css
@@ -1,5 +1,10 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+}
+
+header {
+    margin: 0 20px;
 }
 
 #topo {
@@ -13,7 +18,6 @@
     height: 50px;
     background-color: #444;
     text-align: center;
-
 }
 
 #menu td,
@@ -22,22 +26,138 @@ a.link {
     text-decoration: none;
 }
 
-tr.linDestaque {
+td.colDestaque {
+    width: 66%;
+}
+
+
+#tabDestaques,
+#tabProgramacao,
+#tabWebdesign,
+.colMaisLidos {
+    background-color: #666;
+    color: white;
+}
+
+tr.linTituloTab {
     background-color: #444;
     color: white;
 }
 
-#quadrado {
-    width: 150px;
-    height: 150px;
-    margin: 20px;
-    border: 1px solid black;
+tr.linMontandoLayout #quadrado {
+    width: 250px;
+    height: 250px;
+    margin: 15px 20px 20px 20px;
+    background-color: white;
 }
 
-#quadrados>.quadradinho {
+tr.linMontandoLayout h2,
+tr.linMontandoLayout p {
+    margin-top: 10px;
+    padding-right: 20px;
+}
+
+tr.linTituloTab h1,
+tr.linTituloTab h2 {
+    margin: 5px 0;
+    padding-left: 20px;
+    text-transform: uppercase;
+}
+
+tr.artDestaque h3,
+tr.artDestaque p {
+    padding: 0 20px;
+}
+
+button {
+    position: relative;
+    float: right;
+    right: 20px;
+    font-weight: bold;
+    padding: 0 2px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+.maisArtigos {
+    background-color: #444;
+    padding: 5px 0;
+    margin: 0 20px;
+    text-align: center;
+}
+
+#tabProgramacao ul>li,
+#tabWebdesign ul>li {
+    color: black;
+}
+
+#tabProgramacao ul>li span,
+#tabWebdesign ul>li span {
+    color: white;
+}
+
+.colMaisLidos {
+    vertical-align: top;
+}
+
+#tabMaisLidos h2 {
+    background-color: #444;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+}
+
+#tabMaisLidos ul {
+    margin: 0;
+    padding: 30px;
+    background-color: white;
+    color: black;
+}
+
+#tabMaisLidos ul>li span {
+    color: #666;
+}
+
+#tabMaisLidos input {
+    width: 100%;
+    padding: 15px 0;
+    border: 0;
+    font-size: 18px;
+}
+
+#tabMaisLidos input::placeholder {
+    font-size: 18px;
+    font-style: italic;
+    padding: 5px;
+}
+
+#tabMaisLidos #quadrados {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#tabMaisLidos .quad {
     display: inline-block;
-    width: 120px;
-    height: 120px;
-    margin: 5px;
-    border: 1px solid black;
+    width: 185px;
+    height: 185px;
+    background-color: white;
+}
+#tabMaisLidos .quadradinho1{
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+#tabMaisLidos .quadradinho2{
+    margin-bottom: 20px;
+}
+#tabMaisLidos .quadradinho3{
+    margin-right: 20px;
+}
+
+footer {
+    padding: 20px;
+    margin: 0 20px;
+    background-color: #666;
+    color: white;
 }
