--- a/ex2/ex2.css
+++ b/ex2/ex2.css
@@ -1,8 +1,14 @@
+@import url("../css/reset.css");
+
 @media only screen and (max-width: 768px) {
     section {
         display: flex;
         flex-direction: column;
         width: 100vw;
+    }
+    .card img{
+        width: 100vw;
+        height: auto;
     }
 }
 
@@ -11,6 +17,11 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
+    }
+    .card img{
+        width: 50vw;
+        aspect-ratio: 16/9;
     }
 }
 
@@ -18,5 +29,11 @@
     section {
         display: flex;
         flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .card img{
+        width: 30vw;
+        height: auto;
+        aspect-ratio: 16/9;
     }
 }
